deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: game-library-deployment
    namespace: game-library
    labels:
        app: game-library
spec:
    replicas: 1
    selector:
        matchLabels:
            app: game-library
    template:
        metadata:
            labels:
                app: game-library
        spec:
            containers:
              - name: game-library
                image: asctod/game-library:_IMAGE_TAG_
                readinessProbe:
                    httpGet:
                        path: /api/readiness
                        port: 8000
                    initialDelaySeconds: 20
                    periodSeconds: 61
                    timeoutSeconds: 5
                    failureThreshold: 3
                livenessProbe:
                    httpGet:
                        path: /api/liveness
                        port: 8000
                    initialDelaySeconds: 20
                    periodSeconds: 59
                    timeoutSeconds: 2
                    failureThreshold: 3
                ports:
                  - name: api
                    containerPort: 8000
                  - name: debug
                    containerPort: 6060
                imagePullPolicy: Always
            hostAliases:
              - ip: _K8S_IP_
                hostnames:
                  - _K8S_URL_
---
kind: Deployment
apiVersion: apps/v1
metadata:
    name: zipkin-deployment
    namespace: game-library
    labels:
        app: zipkin
spec:
    replicas: 1
    selector:
        matchLabels:
            app: zipkin
    template:
        metadata:
            labels:
                app: zipkin
        spec:
            containers:
              - name: zipkin
                image: openzipkin/zipkin:2.24
                ports:
                  - name: zipkin
                    containerPort: 9411
            dnsPolicy: Default
            hostNetwork: true
            hostAliases:
              - ip: _K8S_IP_
                hostnames:
                  - _K8S_URL_
