deploy/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
    name: game-library-ingress
    namespace: game-library
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$2
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
    rules:
      - host: vmi644117.contaboserver.net
        http:
            paths:
              - path: /_api(/|$)(.*)
                pathType: Prefix
                backend:
                    service:
                        name: game-library-service
                        port:
                            number: 8000
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
    name: game-library-ingress-with-auth
    namespace: game-library
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$2
        nginx.ingress.kubernetes.io/auth-type: basic
        nginx.ingress.kubernetes.io/auth-secret: basic-auth
        nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - game library'
spec:
    rules:
      - host: vmi644117.contaboserver.net
        http:
            paths:
              - path: /_debug/api(/|$)(.*)
                pathType: Prefix
                backend:
                    service:
                        name: game-library-service
                        port:
                            number: 6060
              - path: /_trace(/|$)(.*)
                pathType: Prefix
                backend:
                    service:
                        name: zipkin-service
                        port:
                            number: 9411
